# test-suite

./: .gitignore  .gitmodules  README.md  RELEASE_NOTES  pyproject.toml  setup.cfg  setup.py
.github/workflows/: automatic_versioning.yml  check_versions.yml  linting.yml  pip_install.yml  scorecards.yml  test.yml  test_docs.yml
CI/: README.md  run_reframe.sh  run_reframe_wrapper.sh
CI/aws_citc/: ci_config.sh
CI/aws_mc/: ci_config.sh
CI/azure_mc/: ci_config.sh
CI/bsc_hca/: ci_config.sh
CI/hortense_EESSI_ss/: ci_config.sh
CI/hortense_local_ss/: ci_config.sh
CI/it4i_karolina/: ci_config.sh
CI/izum_vega/: ci_config.sh
CI/surf_snellius/: ci_config.sh
config/: aws_citc.py  aws_mc.py  azure_mc.py  bsc_hca.py  bsc_marenostrum5.py  github_actions.py  it4i_karolina.py  izum_vega.py  macc_deucalion.py  settings_example.py  software_layer_bot.py  surf_snellius.py  vsc_hortense.py  vsc_ugent_tier2.py
eessi/: __init__.py
eessi/reframe/config/: config_hortense_gpu_rome_a100.py  settings_example.py
eessi/reframe/eessi-checks/applications/: gromacs_check.py  gromacs_check.py.bak20230217_203527  gromacs_check.py.bak20230218_131214
eessi/reframe/eessi_checks/applications/: gromacs_check.py  osu.py
eessi/reframe/eessi_checks/applications/tensorflow/: mnist_setup.py  tensorflow.py  tf_test.py
eessi/reframe/eessi_checks/applications/tensorflow/src/: tf_test.py
eessi/reframe/eessi_utils/: constants.py  hooks.py  utils.py
eessi/testsuite/: __init__.py  check_process_binding.py  common_config.py  constants.py  eessi_mixin.py  eessi_staging.py  get_process_binding.sh  hooks.py  utils.py
eessi/testsuite/hpctestlib/: README.md
eessi/testsuite/hpctestlib/microbenchmarks/mpi/: osu.py
eessi/testsuite/hpctestlib/sciapps/gromacs/: benchmarks.py
eessi/testsuite/hpctestlib/sciapps/metalwalls/: benchmarks.py
eessi/testsuite/hpctestlib/sciapps/qespresso/: benchmarks.py
eessi/testsuite/tests/apps/: MetalWalls.py  QuantumESPRESSO.py  gromacs.py  osu.py
eessi/testsuite/tests/apps/PyTorch/: PyTorch_torchvision.py
eessi/testsuite/tests/apps/PyTorch/src/: get_free_socket.py  pytorch_synthetic_benchmark.py
eessi/testsuite/tests/apps/cp2k/: README.md  cp2k.py
eessi/testsuite/tests/apps/cp2k/cp2k_staging/: cp2k_stage_input.py
eessi/testsuite/tests/apps/cp2k/input/: README.md
eessi/testsuite/tests/apps/espresso/: benchmarks.csv  espresso.py  madelung.py
eessi/testsuite/tests/apps/espresso/src/: job.sh  lj.py  madelung.py  plot.py
eessi/testsuite/tests/apps/lammps/: README.md  lammps.py  run_lj.sh  run_rhodo.sh
eessi/testsuite/tests/apps/lammps/lammps_staging/: lammps_stage_input.py
eessi/testsuite/tests/apps/lammps/src/: input.py
eessi/testsuite/tests/apps/lbmpy-pssrt/: lbmpy-pssrt.py
eessi/testsuite/tests/apps/lbmpy-pssrt/src/: mixing_layer_2D.py
eessi/testsuite/tests/apps/lpc3d/: lpc3d.py
eessi/testsuite/tests/apps/lpc3d/src/: lattice_gas.inpt  pore_dens_freq_2neg.txt  psd.txt
eessi/testsuite/tests/apps/numpy/: __init__.py  numpy.py
eessi/testsuite/tests/apps/numpy/src/: np_ops.py
eessi/testsuite/tests/apps/openfoam/: foam.bash  openfoam.py
eessi/testsuite/tests/apps/openfoam/cavity3D/: COPYING  README.md  evalLogCalcFixedIter.py
eessi/testsuite/tests/apps/tensorflow/: tensorflow.py
eessi/testsuite/tests/apps/tensorflow/src/: mnist_setup.py  tf_test.py
eessi/testsuite/tests/apps/walberla/: walberla.py
eessi/testsuite/tests/libraries/mpi4py/: mpi4py_portable.py  mpi4py_system_specific.py
eessi/testsuite/tests/libraries/mpi4py/src/: mpi4py_reduce.py
eessi/testsuite/tests/libs/blas/: blas.py
scripts/: run_reframe.sh  run_reframe_wrapper.sh
tutorial/mpi4py/: mpi4py_portable.py  mpi4py_portable_legacy.py  mpi4py_portable_mixin.py  mpi4py_system_specific.py
tutorial/mpi4py/src/: mpi4py_reduce.py
(+37 files in other folders)
