[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eessi-testsuite"
version = "0.3.0"
description = "Test suite for the EESSI software stack"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://eessi.io/docs/test-suite"
"Bug Tracker" = "https://github.com/EESSI/test-suite/issues"

[tool.setuptools.packages.find]
include = ["eessi*"]
