[build-system]
# Setuptools_scm<7 to be compatible with Python 3.6
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eessi-testsuite"
description = "Test suite for the EESSI software stack"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]
requires-python = ">=3.6"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://eessi.io/docs/test-suite"
"Bug Tracker" = "https://github.com/EESSI/test-suite/issues"

[tool.setuptools.packages.find]
include = ["eessi*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
write_to = "eessi/testsuite/_version.py"
