[metadata]
name = eessi_tests
version = 0.0.1
description = Test suite for the EESSI software stack
long_description = file: README.md, LICENSE
classifiers =
    Programming Language :: Python :: 3
project_urls =
    Homepage = https://eessi.github.io/docs/software_testing/
    Bug Tracker = https://github.com/EESSI/test-suite/issues

[options]
install_requires =
    setuptools
python_requires = >=3.6
packages = find:
package_dir =
    =eessi/reframe

[options.packages.find]
where = eessi/reframe
include = eessi*
namespaces = true
