[metadata]
name = eessi-testsuite
version = 0.0.2
description = Test suite for the EESSI software stack
long_description = file: README.md, LICENSE
classifiers =
    Programming Language :: Python :: 3
project_urls =
    Homepage = https://eessi.github.io/docs/software_testing/
    Bug Tracker = https://github.com/EESSI/test-suite/issues

[options]
install_requires =
    setuptools
python_requires = >=3.6
packages = find:
package_dir =
    =eessi/testsuite

[options.packages.find]
where = eessi/testsuite
include = eessi*
namespaces = true
