[metadata]
name = eessi-testsuite
version = 0.3.0
description = Test suite for the EESSI software stack
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-2.0-only
classifiers =
    Programming Language :: Python :: 3
project_urls =
    Homepage = https://eessi.io/docs/test-suite
    Bug Tracker = https://github.com/EESSI/test-suite/issues

[options]
install_requires =
    setuptools
python_requires = >=3.6
packages = find:
namespace_packages = eessi

[options.packages.find]
include = eessi*

[flake8]
max-line-length = 120
# ignore star imports (F403, F405)
# ignore obsolete warning (W503)
ignore = F403, F405, W503
